@@ -1,3 +1,7 @@
+2009-07-01  Glenn Morris  <rgm@gnu.org>
+
+	* progmodes/f90.el (f90-break-delimiters, f90-no-break-re): Doc fixes.
+
 2009-07-01  Evangelos Evangelou  <vangelis@email.unc.edu>  (tiny change)
 
 	* progmodes/f90.el (f90-no-break-re): Add "(/" and "/)".  (Bug#3730)
